# argos

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Containerfile  Dockerfile  Makefile  NEWS.rst  README.rst  app.argos.Argos.json  argos-dependencies.json  generated-poetry-sources.json  io.github.orontee.Argos.json  meson.build  pypi-dependencies.json  pypi-dependencies.yaml  pyproject.toml  window.ui
.github/workflows/: build.yaml  ci.yaml
argos/: .gitignore  Makefile  __main__.py  accessor.py  app.argos.Argos.gresource.xml  app.py  argos.gresource.xml  argos.in  backends.py  conf.py  download.py  dto.py  http.py  info.py  io.github.orontee.Argos.gresource.xml  meson.build  message.py  model.py  notify.py  placement.py  scanner.py  session.py  time.py  ui.py  utils.py  window.py  window.ui  ws.py  wseventhandler.py
argos/controllers/: __init__.py  albums.py  artists.py  base.py  helper.py  images.py  library.py  playback.py  playlists.py  progress.py  tracklist.py  utils.py  visitors.py  volume.py
argos/model/: __init__.py  album.py  artist.py  backends.py  directory.py  helper.py  library.py  mixer.py  model.py  playback.py  playlist.py  random.py  searchresult.py  status.py  track.py  tracklist.py  utils.py
argos/ui/: about.ui  about.ui.in  album_box.ui  album_details_box.ui  album_track_box.ui  albums_browsing_progress_box.ui  albums_window.ui  app_menu.ui  artist_view.ui  condensed_playing_box.ui  help_overlay.ui  library_browsing_progress_box.ui  library_window.ui  meson.build  playing_box.ui  playing_box_empty_tracklist_box.ui  playlist_creation_dialog.ui  playlist_empty_tracks_box.ui  playlist_loading_tracks_box.ui  playlist_selection_dialog.ui  playlist_track_box.ui  playlist_tracks_box.ui  playlists_box.ui  preferences.ui  search_result_view.ui  stream_uri_dialog.ui  stylesheet.css  title_bar.ui  top_controls_box.ui  track_box.ui  track_length_box.ui  tracklist_box.ui  tracklist_random_dialog.ui  tracklist_track_box.ui  tracks_view.ui  window.ui
argos/widgets/: __init__.py  about.py  albumbox.py  albumdetailsbox.py  albumsbrowsingprogressbox.py  albumswindow.py  albumtrackbox.py  artistview.py  condensedplayingbox.py  coverview.py  librarybrowsingprogressbox.py  librarywindow.py  playingbox.py  playingboxemptytracklistbox.py  playlistcreationdialog.py  playlistemptytracksbox.py  playlistlabel.py  playlistloadingtracksbox.py  playlistsbox.py  playlistselectiondialog.py  playlisttrackbox.py  playlisttracksbox.py  preferences.py  searchresultview.py  streamuridialog.py  titlebar.py  tlbox.py  tltrackbox.py  topcontrolsbox.py  trackbox.py  tracklengthbox.py  tracklistbox.py  tracklistrandomdialog.py  tracklisttrackbox.py  tracksview.py  utils.py  volumebutton.py
data/: Makefile  app.argos.Argos.appdata.xml.in  app.argos.Argos.desktop  app.argos.Argos.desktop.in  app.argos.Argos.gresource.xml  app.argos.Argos.gschema.xml  io.github.orontee.Argos.appdata.xml.in  io.github.orontee.Argos.desktop.in  io.github.orontee.Argos.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: app_menu.ui  preferences.ui  window.ui
debian/: changelog  control  rules
docs/: _config.yml  architecture.rst  index.md  workspace.dsl
docs/_includes/: head-custom.html
docs/assets/css/: custom.css
po/: LINGUAS  POTFILES.in  README.rst  de.po  en.po  es.po  fr.po  meson.build  nb_NO.po  nl.po  ru.po  ta.po
scripts/: build-deb-package  build_deb  create-github-pre-release  create-pre-release  prepare-next-release  release-version  update-translations  update-version
tests/: test_download.py  test_dto.py  test_http.py  test_message.py  test_session.py  test_utils.py  test_wseventhandler.py
tests/controllers/: test_helper.py  test_images.py  test_utils.py  test_visitors.py
tests/data/: album.json  album_tracks.json  artist.json  history.json  image.json  images.json  lookup.json  playlist.json  playlist_ref.json  root.json  search_results.json  tltrack.json  tltracks.json  track.json  track_playback_ended.json  track_playback_started.json  track_ref.json
tests/model/: test_helper.py  test_utils.py
