[tool.poetry]
name = "argos"
version = "1.13.0"
description = "Gtk front-end to control a Mopidy server through a tiny touch screen"
authors = ["Matthias Meulien <orontee@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/orontee/argos"
include = ["argos/io.github.orontee.Argos.gresource", "argos/ui/about.ui"]
exclude = ["argos/.gitignore"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = ">=3.7.4"
PyGObject = ">=3.38.0"
pycairo = ">=1.16.0"
pyxdg = ">=0.27"
aiohttp-client-cache = ">=0.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^24.3.0"
pre-commit = "^v2.20.0"
semver = "^2.13.0"
coverage = "^7.2.3"
python-language-server = "^0.36.2"
pyls-black = "^0.4.7"
pyls-mypy = "^0.1.8"

[tool.mypy]
ignore_missing_imports = false
namespace_packages = true

[[tool.mypy.overrides]]
module = "gi.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.coverage.run]
source = ["argos/"]
omit = ["argos/app.py", "argos/notify.py", "argos/placement.py",  "argos/widgets/*", "argos/window.py", ]
