[tool.poetry]
name = "argos"
version = "1.19.0a0"
description = "Gtk front-end to control a Mopidy server through a tiny touch screen"
authors = ["Matthias Meulien <orontee@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/orontee/argos"
include = ["argos/io.github.orontee.Argos.gresource", "argos/ui/about.ui"]
exclude = ["argos/.gitignore"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
expandvars = ">=0.12.0"
PyGObject = "3.50.0"
aiohttp = ">=3.7.4"
aiohttp-client-cache = ">=0.8.0"
pycairo = ">=1.16.0"
pyxdg = ">=0.27"
zeroconf = "0.147.0"
pylsp-mypy = "^0.7.1"
python-lsp-black = "^2.0.0"
colorlog = "^6.10.1"

[tool.poetry.group.dev.dependencies]
black = "^26.3.0"
coverage = "^7.2.3"
mypy = "^1.20.0"
pre-commit = "4.5.1"
python-lsp-server = "^1.14.0"
requirements-parser = "0.13.0"
semver = "3.0.4"

[tool.mypy]
ignore_missing_imports = false
namespace_packages = true

[[tool.mypy.overrides]]
module = "gi.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.coverage.run]
source = ["argos/"]
omit = ["argos/app.py", "argos/notify.py", "argos/placement.py",  "argos/widgets/*", "argos/window.py", ]
